@@ -21,6 +21,12 @@
 
 package cascading.flow.stack;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Set;
+
 import cascading.flow.FlowElement;
 import cascading.flow.FlowStep;
 import cascading.flow.Scope;
@@ -34,12 +40,6 @@ import cascading.util.Util;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.OutputCollector;
 import org.apache.log4j.Logger;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Set;
 
 /**
  *
@@ -160,6 +160,9 @@ public class FlowReducerStack
       }
     catch( StackException exception )
       {
+      if( exception.getCause() instanceof Error )
+        throw (Error) exception.getCause();
+
       if( exception.getCause() instanceof IOException )
         throw (IOException) exception.getCause();
 
